--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -24,4 +24,4 @@ jobs:
         run: |
           npm build
       - name: Publish NPM Package
-        run: npm publish --dry-run
+        run: npm publish
